--- a/Text for Ass. 2 and 3. /README
+++ b/Text for Ass. 2 and 3. /README
@@ -1,7 +1,7 @@
 -- General information -- 
-When reading these files, please do press "View Raw".
+When reading these files, please, do press "View Raw".
 This way you download them to your computer so you can read them there. 
-Github.com does not support pdf. 
+Github.com does not support .pdf. 
 
 -- FAQ --
 Q: Why did you not made theese files as .txt so I can read them directly at github.com
