--- a/Text for Ass. 2 and 3. /README
+++ b/Text for Ass. 2 and 3. /README
@@ -1,9 +1,9 @@
--- General information -- 
+=== General information ===
 When reading these files, please, do press "View Raw".
 This way you download them to your computer so you can read them there. 
 Github.com does not support .pdf. 
 
--- FAQ --
+=== FAQ ===
 Q: Why did you not made theese files as .txt so I can read them directly at github.com
 A: Because I a .pdf has better layout than .txt.
    The reader will not get the full experiense of the content through a .txt file. 
