--- a/Text for Ass. 2 and 3. /README
+++ b/Text for Ass. 2 and 3. /README
@@ -1,5 +1,5 @@
 === General information ===
-When reading these files, please, do press "View Raw".
+When reading "Assigment 2" and "Assigment 3", please, do press "View Raw".
 This way you download them to your computer so you can read them there. 
 Github.com does not support .pdf. 
 
