--- a/Text for Ass. 2 and 3. /README
+++ b/Text for Ass. 2 and 3. /README
@@ -5,5 +5,5 @@ Github.com does not support .pdf.
 
 == FAQ ==
 Q: Why did you not made theese files as .txt so I can read them directly at github.com
-A: Because I a .pdf has better layout than .txt.
+A: Because I strongly believe that a .pdf has better layout than .txt.
    The reader will not get the full experiense of the content through a .txt file. 
