--- a/Learn Python The Hard Way/spill/readme
+++ b/Learn Python The Hard Way/spill/readme
@@ -2,3 +2,5 @@ Download the whole directory "spill". Run with python bin/app.py.
 Then open your browser and type inn 0.0.0.0:8080 or localhost:8080
 
 This is still a prototyp. Errors may occour. 
+
+#Se tekst for ass2 for forklaring av spillet. 
