--- a/Learn Python The Hard Way/spill - ex52/readme
+++ b/Learn Python The Hard Way/spill - ex52/readme
@@ -1,3 +1,4 @@
+Last version of game. 
 Download the whole directory "spill". Run with python bin/app.py. 
 Then open your browser and type inn 0.0.0.0:8080 or localhost:8080
 
